fixed input number on firefox

--- a/frontend/src/assets/scss/_custom.scss
+++ b/frontend/src/assets/scss/_custom.scss
@@ -796,3 +796,8 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
